tests/compile-fail/compile_fail__pseudo_bad_name.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: invalid pseudo-arg
   ┌─ <input>:28:15
   │
28 │         wait(@argargarg="0f000000");
   │               ^^^^^^^^^ not a pseudo-arg
   │
   = valid pseudo-args are: pop, mask, args


